syntax = "proto3";
package flibustier;

option go_package = "com.sigizmund/flibustier";

message Author {
  string flibusta_author_id = 1;
  string first_name = 2;
  string middle_name = 3;
  string last_name = 4;
}

message Book {
  string flibusta_book_id = 1;
  repeated string flibusta_author_id = 2;
  string title = 3;
}

message Sequence {
  string flibusta_sequence_id = 1;
  string sequence_name = 2;
  repeated string book_id = 3;
}